<resources>
    <string name="app_name">Первая помощь</string>
    <string name="title_first_aid">Первая помощь</string>
    <string name="title_tests">Проверь себя</string>
    <string name="title_manual">Справочник</string>
    <string name="sos_call">Вызвать скорую</string>
    <string name="call_to_ambulance_dialog_title">Вызвать скорую помощь?</string>
    <string name="call_to_ambulance_dialog_negative_btn">Отмена</string>
    <string name="call_to_ambulance_dialog_positive_btn">Вызвать</string>
    <string name="call_to_ambulance_dialog_message">Звонок будет произведен на общий номер экстренных служб 112. Вызов совершится даже при отсутствии связи, SIM-карты или денег на счету.</string>
    <string name="start_test">Начать тест</string>
    <string name="test_header">Тест на тему  «Оказание первой медицинской помощи»</string>
    <string name="test_message">Проверьте свои знания и пройдите тест. Тест состоит из 40 вопросов. Вы можете завершить тест в любой момент или пропустить вопрос, если не знаете ответ.</string>
    <string name="finish_test">Закончить тест</string>
    <string name="skip_question">Пропустить вопрос</string>
    <string name="test_result">Результаты теста</string>
    <string name="i_know_what_happen">Я знаю, что случилось, но не знаю, как оказать первую помощь</string>
    <string name="i_dont_know_what_happen">Я не знаю, что случилось, и не знаю, как оказать первую помощь</string>
    <string name="how_to_call_doctors">Как вызвать скорую помощь?</string>
    <string name="heart_ritm">Таймер для измерения пульса</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Назад</string>
    <string name="exit">Выход</string>
    <string name="metronom">Метроном для непрямого массажа сердца</string>
    <string name="burn_light">Ожоги, относящиеся к легкой степени характеризуются покраснением поврежденного участка, отеком, болью и возможным образованием волдырей.</string>
    <string name="burn_tight">Ожоги тяжелой степени характеризуются образование светло-, темно-коричневой или черной корочки.</string>
    <string name="light_btn">Легкая степень</string>
</resources>
