<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/first_aid_help"/>


            <Button
                android:id="@+id/know_what_happen"
                android:layout_marginTop="7dp"
                android:textAllCaps="false"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/button_selector"
                android:text="@string/i_know_what_happen"
                android:textSize="16sp"
                />

            <Button
                android:id="@+id/dont_know_what_happen"
                android:layout_marginTop="7dp"
                android:textAllCaps="false"
                android:layout_marginBottom="20dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:background="@drawable/button_selector"
                android:text="@string/i_dont_know_what_happen"
                android:textSize="16sp"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="2dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/call__doctor" />

            <Button
                android:id="@+id/how_to_call_doctors"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/button_selector"
                android:text="@string/how_to_call_doctors"
                android:textSize="16sp"
                android:textAllCaps="false" />


        </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="2dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginTop="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:layout_weight="2"
                    android:paddingRight="10dp"
                    android:layout_marginTop="2dp">

                <Button
                    android:id="@+id/heart_ritm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_selector"
                    android:text="@string/heart_ritm"
                    android:textSize="16sp"
                    android:textAllCaps="false" />

                    <Button
                        android:id="@+id/ivl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/button_selector"
                        android:textSize="16sp"
                        android:text="@string/metronom"
                        android:textAllCaps="false" />

                </LinearLayout>

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="148dp"
                    android:layout_weight="1"
                    android:src="@drawable/timer" />


            </LinearLayout>



            <View
                android:id="@+id/volunteering_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>


            <LinearLayout
                android:id="@+id/volunteering"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp"
                android:weightSum="2"
                android:visibility="gone"
                android:layout_marginTop="2dp">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:src="@drawable/volunteer" />

                <Button
                    android:id="@+id/volunteer_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@drawable/button_selector"
                    android:text="Волонтерство"
                    android:textSize="16sp"
                    android:textAllCaps="false" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>